--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.7.1-2) UNRELEASED; urgency=medium
+
+  * Only run unit tests, nothing else.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 09 Dec 2015 11:09:29 +0100
+
 python-openstacksdk (0.7.1-1) experimental; urgency=medium
 
   * Initial release. (Closes: #778645)
