--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 python-openstacksdk (0.7.1-2) UNRELEASED; urgency=medium
 
+  [ Thomas Goirand ]
   * Removed intersphinx module.
 
- -- Thomas Goirand <zigo@debian.org>  Wed, 09 Dec 2015 11:09:29 +0100
+  [ Corey Bryant ]
+  * d/rules: Run py3 tests.
+
+ -- Corey Bryant <corey.bryant@canonical.com>  Wed, 16 Dec 2015 09:19:48 -0500
 
 python-openstacksdk (0.7.1-1) experimental; urgency=medium
 
