d/control: Add python(3)-keystoneauth1 to BDs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python-openstacksdk (0.7.1-2) UNRELEASED; urgency=medium
   [ Corey Bryant ]
   * d/rules: Run py3 tests.
   * d/watch: Updated to get tarball from github.
+  * d/control: Add python(3)-keystoneauth1 to BDs.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Wed, 16 Dec 2015 09:19:48 -0500
 
