--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-openstacksdk (0.7.1-3) UNRELEASED; urgency=medium
+
+  * d/control: Update min version of python(3)-keystoneauth1 to ensure this
+    bug is fixed: https://bugs.launchpad.net/keystoneauth/+bug/1502232
+
+ -- Corey Bryant <corey.bryant@canonical.com>  Thu, 07 Jan 2016 07:55:17 -0500
+
 python-openstacksdk (0.7.1-2) experimental; urgency=medium
 
   [ Thomas Goirand ]
