--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.7.4-1) UNRELEASED; urgency=medium
+
+  * d/conrol: Update dependencies.
+
+ -- Ivan Udovichenko <iudovichenko@mirantis.com>  Wed, 10 Feb 2016 15:23:34 +0200
+
 python-openstacksdk (0.7.1-3) UNRELEASED; urgency=medium
 
   * d/control: Update min version of python(3)-keystoneauth1 to ensure this
