--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ python-openstacksdk (0.7.4-1) UNRELEASED; urgency=medium
   [ Corey Bryant ]
   * d/control: Update min version of python(3)-keystoneauth1 to ensure this
     bug is fixed: https://bugs.launchpad.net/keystoneauth/+bug/1502232
+  * d/control: Add git to build-depends for sphinx-build
 
  -- Ivan Udovichenko <iudovichenko@mirantis.com>  Wed, 10 Feb 2016 15:23:34 +0200
 
