--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.8.0-2) UNRELEASED; urgency=medium
+
+  * Bumped required python-iso8601 version in build-depends-indep.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 10 Mar 2016 10:55:47 +0100
+
 python-openstacksdk (0.8.0-1) experimental; urgency=medium
 
   [ Ivan Udovichenko ]
