--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-python-openstacksdk (0.8.0-2) UNRELEASED; urgency=medium
+python-openstacksdk (0.8.1-1) experimental; urgency=medium
 
+  * New upstream release.
   * Bumped required python-iso8601 version in build-depends-indep.
 
- -- Thomas Goirand <zigo@debian.org>  Thu, 10 Mar 2016 10:55:47 +0100
+ -- Thomas Goirand <zigo@debian.org>  Tue, 22 Mar 2016 17:14:42 +0100
 
 python-openstacksdk (0.8.0-1) experimental; urgency=medium
 
