--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.8.1-3) UNRELEASED; urgency=medium
+
+  * Standards-Version is 3.9.8 now (no change)
+
+ -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:28:36 +0200
+
 python-openstacksdk (0.8.1-2) unstable; urgency=medium
 
   * Uploading to unstable.
