--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-openstacksdk (0.8.1-3) UNRELEASED; urgency=medium
 
   * Standards-Version is 3.9.8 now (no change)
+  * d/rules: Removed UPSTREAM_GIT with default value
 
  -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:28:36 +0200
 
