--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-python-openstacksdk (0.8.1-3) UNRELEASED; urgency=medium
+python-openstacksdk (0.9.0-1) experimental; urgency=medium
 
+  [ Ondřej Nový ]
   * Standards-Version is 3.9.8 now (no change)
   * d/rules: Removed UPSTREAM_GIT with default value
   * d/copyright: Changed source URL to new one
 
- -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:28:36 +0200
+  [ Thomas Goirand ]
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 17 Jul 2016 15:32:34 +0200
 
 python-openstacksdk (0.8.1-2) unstable; urgency=medium
 
