--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ python-openstacksdk (0.9.0-1) experimental; urgency=medium
 
   [ Thomas Goirand ]
   * New upstream release.
+  * Fixed (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 17 Jul 2016 15:32:34 +0200
 
