--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
 python-openstacksdk (0.9.0-1) experimental; urgency=medium
 
+  * New upstream release.
+  * Fixed (build-)depends for this release.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 17 Jul 2016 15:32:34 +0200
+
+python-openstacksdk (0.8.6-1) experimental; urgency=medium
+
   [ Ondřej Nový ]
   * Standards-Version is 3.9.8 now (no change)
   * d/rules: Removed UPSTREAM_GIT with default value
@@ -9,7 +16,7 @@ python-openstacksdk (0.9.0-1) experimental; urgency=medium
   * New upstream release.
   * Fixed (build-)depends for this release.
 
- -- Thomas Goirand <zigo@debian.org>  Sun, 17 Jul 2016 15:32:34 +0200
+ -- Thomas Goirand <zigo@debian.org>  Mon, 06 Jun 2016 09:17:58 +0000
 
 python-openstacksdk (0.8.1-2) unstable; urgency=medium
 
