--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.9.0-2) UNRELEASED; urgency=medium
+
+  * Using pkgos-dh_auto_{test,install} from openstack-pkg-tools >= 52~.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 17 Jul 2016 13:48:59 +0000
+
 python-openstacksdk (0.9.0-1) experimental; urgency=medium
 
   * New upstream release.
