--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ python-openstacksdk (0.9.5-1) UNRELEASED; urgency=medium
 
   [ Corey Bryant ]
   * New upstream release.
+  * d/control: Align (Build-)Depends with upstream.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Fri, 02 Sep 2016 12:10:18 -0400
 
