--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-openstacksdk (0.9.5-2) UNRELEASED; urgency=medium
+
+  * d/s/options: extend-diff-ignore of .gitreview
+  * d/control: Use correct branch in Vcs-* fields
+
+ -- Ondřej Nový <onovy@debian.org>  Mon, 26 Sep 2016 19:12:02 +0200
+
 python-openstacksdk (0.9.5-1) experimental; urgency=medium
 
   [ Thomas Goirand ]
