Uploading to unstable
Change-Id: I016cfdc3313bf9386bb19fc04a845b28b010655e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-openstacksdk (0.9.5-2) UNRELEASED; urgency=medium
+python-openstacksdk (0.9.5-2) unstable; urgency=medium
 
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Use correct branch in Vcs-* fields
