--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-openstacksdk (0.9.5-3) UNRELEASED; urgency=medium
+
+  * Bumped debhelper compat version to 10
+
+ -- Ondřej Nový <onovy@debian.org>  Thu, 24 Nov 2016 00:08:25 +0100
+
 python-openstacksdk (0.9.5-2) unstable; urgency=medium
 
   * d/s/options: extend-diff-ignore of .gitreview
